# dashboard

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  development.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json
.claude/: settings.local.json
.devcontainer/: devcontainer.json
backend/: .dockerignore  Dockerfile  README.md  playground.db  pyproject.toml  test_filter.py
backend/app/: __init__.py  cleanup_service.py  config.py  database.py  exceptions.py  file_validator.py  main.py  models.py  query_builder.py  relationship_graph.py  schema_inspector.py  session_manager.py
backend/scripts/: create_playground_db.py  load_sample_data.sh
backend/test_data/: sample_data.sql  sample_schema.sql
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  types.ts
frontend/src/components/: ActivityIcon.tsx  AnimatedDogLogo.tsx  CircleHelpIcon.tsx  Dashboard.tsx  DashboardWrapper.tsx  DataTable.tsx  FilterBuilder.tsx  HomePage.tsx  ShortcutsModal.tsx  Sidebar.tsx  TableWidget.tsx  WidgetGrid.tsx
frontend/src/hooks/: useFilters.ts  useSchema.ts  useTableData.ts  useTableSelection.ts
frontend/src/lib/: api.ts  gridUtils.ts  utils.ts
references/: spec.md  todo.md
references/inspiration/: filter_builder.py
